# utilities

./: README.md
Programming/: readme.md
Programming/Assembly/: README.md  hello_world.asm
Programming/Assembly/MASM/: hello_world.asm
Programming/C#/: PassthroughManager.cs
Programming/C++/header/header_test_1/: test_header_1.cpp  test_header_1.h  test_header_2.cpp  test_header_2.h  test_header_3.h  test_header_4.h  test_header_main  test_header_main.cpp
Programming/C++/try-catch/: try_catch_1  try_catch_1.cpp
Programming/MATLAB/: GPS_cal.m
System Identification/: README  drawshapes.m
System Identification/Hoorn Model v3/: HoornModel3.m  HoornSimulation_V3.slx  aprbs_gen.cpp  aprbs_gen.txt  chirp_gen.cpp  excitation_signals.asv  excitation_signals.m  excitation_signals_old.m  multisine_gen.cpp  multisine_gen.txt  prbs_gen.cpp  prbs_gen.txt
applications/: README.md
applications/Mobile Robot/: Calculation.XLSX  Robot_NOTE.docx
applications/Mobile Robot/readInput/: cmdKBM_DiffRobotSocket.py  cmdKBM_DiffRobotTemplate.py  handGesture.py  readKeyboard.py  readMouse_Trackpad.py  tcpClientSendOnly.py  tcpClientTemplate.py  tcpServerReceiveOnly.py  tcpServerTemplate.py
applications/Mobile Robot/readInput/myenv/: pyvenv.cfg
applications/Qt/: readme.txt
applications/Qt/AutoKeyPresser-qt-cpp/: CMakeLists.txt
applications/Qt/AutoKeyPresser-qt-cpp/src/: main.cpp
applications/Qt/AutoKeyPresserOnMSWord-qt-cpp/src/: main.cpp
applications/Qt/CaptureWindow-qt-cpp/: CMakeLists.txt
applications/Qt/CaptureWindow-qt-cpp/src/: main.cpp
applications/Qt/ImageOverlayMSWord-qt-cpp/: CMakeLists.txt
applications/Qt/ImageOverlayMSWord-qt-cpp/src/: main.cpp
applications/Qt/hello-qt-cpp/: CMakeLists.txt
applications/Qt/hello-qt-cpp/src/: main.cpp
applications/Youtube_API/: youtube_api_search.py
applications/researchTree/examples/sysIden/: collapsable.css  collapsable.js
data-structure-n-algorithm/: README.md
data-structure-n-algorithm/graph_data_structure/example-1/: directed_graph_1.cpp  undirected_graph_1.cpp  weighted_directed_graph_1.cpp
data-structure-n-algorithm/graph_data_structure/example-2/: adjacency_matrix_1.cpp  adjacency_matrix_2.cpp  adjacency_matrix_3.cpp  graph_bfs_recursion.cpp  graph_dfs_recursion.cpp
data-structure-n-algorithm/searching/: binary_search.cpp  interpolation_search.cpp  linear_search.cpp
data-structure-n-algorithm/sorting/: README.md  bubble_sort.cpp  datagen.c  dataset.txt  insertion_sort.cpp  insertion_sort_result.txt  merge_sort.cpp  quick_sort.cpp  selection_sort.cpp  shell_sort.cpp
interprocess-comm/: README.md
interprocess-comm/NamedPipe_FIFO/: program_1  program_1.cpp  program_2
interprocess-comm/linux-serial-port/: linux_serial_1  linux_serial_1.c
interprocess-comm/shared-memory/shared-memory-correct/: reader  reader.cpp  writer  writer.cpp
interprocess-comm/socket_programming/single-server-multiple-client/: server_1
interprocess-comm/socket_programming/single-server-single-client/: client_1.cpp  server_1  server_1.cpp
remote-access/: README.md  server_1.py
remote-access/flask/flask-video-streaming/: README.md  app.py
socket_programming/: README.md
socket_programming/single-server-multiple-client/: server_1.cpp
socket_programming/single-server-single-client/: client_1  client_1.cpp
